--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<Encase>
 	<p>
-		<blockquote class="questions">Who was the first female to become the governor of an Indian state?</blockquote>
-		<blockquote class="questions">Who among first Woman to climb Mount Everest twice?</blockquote>
-		<blockquote class="questions">Who is President of India?</blockquote>
+		<blockquote class="questions">`Who was the first female to become the governor of an Indian state?`</blockquote>
+		<blockquote class="questions">`Who among first Woman to climb Mount Everest twice?`</blockquote>
+		<blockquote class="questions">`Who is President of India?`</blockquote>
 	</p>
 	</Encase>
     <script type="text/javascript" src="./script.js">
