--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<Encase>
-	<p>
-		<blockquote class="questions">`Who was the first female to become the governor of an Indian state?`</blockquote>
-		<blockquote class="questions">`Who among first Woman to climb Mount Everest twice?`</blockquote>
-		<blockquote class="questions">`Who is President of India?`</blockquote>
-	</p>
+	
+		<blockquote><p class="questions">Who was the first female to become the governor of an Indian state?</p></blockquote>
+		<blockquote><p class="questions">Who among first Woman to climb Mount Everest twice?</p></blockquote>
+		<blockquote><p class="questions">Who is President of India?</p></blockquote>
+	
 	</Encase>
     <script type="text/javascript" src="./script.js">
 </script>
